tests/NormalTests/paczka1/small_fuzzy/33514270.err
Error in line 1: DQ9o6Ob0v A116 29,4
Error in line 10: D2GyEiOejU A720 65,9
Error in line 11: DQ9o6Ob0v A116 34,9
